--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
     <span class="tempo"> Segundos </span>
         </div>
     </div>
-
+    <div class="audio"
+    <audio id="player" autoplay="autoplay" controls="controls">
+        <source src="sua_musica.mp3" type="audio/mp3" />
+    </div>
     <script  src="assets/css/assets/javascript/script.js"></script >
 </body>
 </html>
